Css/master.css
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
  background-color: #e5e5e5;
}

body {
  font-family: "Poppins", sans-serif;
  width: 100%;
}

header {
  width: 100%;
  background-color: #fff;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav {
  padding-right: 31px;
}

nav .nav-links .nav-transition {
  transition: font-size 1s ease 0s, color 1s ease 0s;
}

nav .nav-links .nav-transition:hover {
  font-size: 30px;
  color: #6070ff;
}

.logo {
  color: #6070ff;
  font-size: 18px;
  font-weight: 700;
  line-height: 20px;
  padding-left: 24px;
  align-self: center;
  font-style: normal;
  text-decoration: none;
}

header nav div {
  display: flex;
  justify-content: flex-end;
}

header nav div img {
  width: 18px;
  height: 12px;
  align-self: center;
  margin-right: 35px;
}

/* header end  */

main {
  border-radius: 0 0 0 76px;
  background-image: url(../picture/header-shapes\ mobile.png);
  height: 618px;
  background-color: #fff;
  background-repeat: no-repeat;
  background-size: 100%;
}

div.first-div {
  display: flex;
  flex-direction: column;
}

main div div {
  margin-top: 95px;
  margin-left: 24px;
  margin-right: 24px;
  color: #172b4d;
}

h1 {
  font-weight: 700;
  font-size: 40px;
}

.intro {
  color: #344563;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0;
  text-align: left;
}

.Connect {
  color: #7f8cff;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  letter-spacing: 0;
  text-align: left;
}

ul {
  display: flex;
  list-style: none;
  justify-content: flex-start;
  padding: 0;
  gap: 20px;
}

ul li a {
  font-size: 17.99px;
  color: #505f79;
  border-radius: 0;
}

/* <!-- first work page --> */

.space {
  width: 375px;
  height: 90px;
}

div.repeated-div {
  height: 566px;
  width: 327px;
  margin: 24px;
  top: 114px;
  border-radius: 16px;
  padding: 16px;
  display: grid;
  background-color: #fff;
  grid-template-rows: 200px 70px 35px 92px;
}

img.repeated-img {
  height: 220px;
  width: 295px;
  border-radius: 8px;
  display: inline-block;
}

h2.repeated-p1 {
  padding-top: 36px;
  height: 36px;
  width: 295px;
  left: 0;
  top: 0;
  color: #172b4d;
  font-size: 32px;
  font-weight: 700;
  line-height: 44px;
  letter-spacing: 0;
  text-align: left;
}

ul.repeated-ul {
  margin-top: 72px;
  list-style: disc;
  height: fit-content;
  width: fit-content;
  left: 0;
  top: 48px;
  border-radius: 0;
  font-size: 13px;
  font-weight: 600;
  line-height: 16px;
  align-items: baseline;
  justify-content: space-between;
  gap: 32px;
}

li.repeated-li1 {
  list-style: none;
  color: #344563;
}

li.repeated-li2 {
  color: #7a869a;
}

li.repeated-li3 {
  color: #7a869a;
}

ul.repeated-ul li::marker {
  color: #c1c7d0;
  font-size: 16px;
}

p.repeated-p2 {
  font-size: 15px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0;
  text-align: left;
  height: 76px;
  width: 295px;
  left: 0;
  top: 92px;
  border-radius: nullpx;
}

ul.repeated-ul2 {
  font-size: 12px;
  font-weight: 500;
  line-height: 16px;
  letter-spacing: 0.03em;
  text-align: left;
}

li.repeated-li4 {
  color: #6070ff;
  background-color: #ebebff;
  height: 24px;
  width: 57px;
  border-radius: 8px;
  padding: 4px 12px 4px 12px;
}

li.repeated-li5 {
  color: #6070ff;
  background-color: #ebebff;
  height: 24px;
  width: 49px;
  left: 65px;
  top: 0;
  border-radius: 8px;
  padding: 4px 12px 4px 12px;
}

li.repeated-li6 {
  color: #6070ff;
  background-color: #ebebff;
  height: 24px;
  width: 92px;
  left: 122px;
  top: 0;
  border-radius: 8px;
  padding: 4px 12px 4px 12px;
}

button.see-button {
  color: #396df2;
  background-color: #fff;
  border: 1px #6070ff solid;
  height: 48px;
  width: 126px;
  left: 0;
  top: 12px;
  border-radius: 8px;
  padding: 12px;
  font-size: 17px;
  font-weight: 500;
  line-height: 24px;
  text-align: center;
}

button.see-button:hover {
  color: #fff;
  background-color: #6070ff;
}

button.see-button:active {
  color: #fff;
  background-color: #2230d2;
}

/* second page  */
div.repeated-div-2 {
  height: 592px;
  grid-template-rows: 200px 110px 35px 92px;
  width: 327px;
  margin: 24px;
  top: 114px;
  border-radius: 16px;
  padding: 16px;
  display: grid;
  background-color: #fff;
}

.space-2 {
  display: grid;
  gap: 88px;
  width: 100%;
  justify-items: center;
}

/* about my self */
section.about-myself {
  height: 1263px;
  width: 100%;
  left: 375px;
  top: 4769px;
  background-color: #fff;
  border-top-right-radius: 75px;
}

div.div-flex {
  display: flex;
  flex-direction: column;
  padding-top: 114px;
  padding-left: 24px;
  padding-right: 24px;
}

ul.social-1 {
  margin-left: 11px;
}

ul.end-part {
  flex-direction: column;
  font-size: 20px;
  font-weight: 500;
  line-height: 0px;
  letter-spacing: 0;
  text-align: left;
  display: flex;
  margin-left: 15px;
  margin-top: 50px;
}

hr {
  width: 94%;
  border-top: 1px solid #dfe1e6;
}

button.resume {
  color: #396df2;
  background-color: #fff;
  border: 1px #6070ff solid;
  height: 48px;
  width: 162px;
  left: 0;
  top: 12px;
  border-radius: 8px;
  padding: 12px;
  font-size: 17px;
  font-weight: 500;
  line-height: 24px;
  text-align: center;
}

button.resume:hover {
  color: #fff;
  background-color: #6070ff;
}

button.resume:active {
  color: #fff;
  background-color: #2230d2;
}

ul.skil {
  flex-direction: column;
}

.skil li {
  background: #f7f7f9;
  height: 66.7155990600586px;
  width: 95%;
  left: 12px;
  top: 169.43115234375px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  padding-left: 12px;
}

.skil li p {
  padding-left: 16px;
  font-size: 15px;
  font-weight: 500;
  line-height: 20px;
  letter-spacing: 0;
  text-align: left;
}
/* ... */

